// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-jbKcbu tgGys"
>
  <div
    className="sc-ktHwxA geMWbx"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-ktHwxA geMWbx"
>
  <div
    className="sc-jbKcbu dSTwqC"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has padding.
    </p>
  </div>
</div>
`;
